--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
 }
 
@@ -53,6 +53,17 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input[required] + label::after,
+textarea[required] + label::after {
+  content: "*Required";
+  color: red;
+}
+
+label {
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (prefers-color-scheme: light) {
